parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls varDecl
   4        | decls objDecl
   5        | decls stmtDecl
   6        | decls fnDecl

   7  varDecl : varType ID SEMI
   8          | varType ID ASSIGN expr SEMI

   9  varDeclList :
  10              | varDeclList varDecl

  11  objDecl : OBJECT ID SEMI

  12  stmtDecl : expr SEMI
  13           | RETURN SEMI
  14           | RETURN expr SEMI
  15           | LC_BRACE statementsList RC_BRACE
  16           | IF LPAREN expr RPAREN stmtDecl
  17           | IF LPAREN expr RPAREN stmtDecl ELSE stmtDecl
  18           | FOR LPAREN optionalExpr SEMI expr SEMI optionalExpr RPAREN stmtDecl
  19           | WHILE LPAREN expr RPAREN stmtDecl

  20  fnDecl : varType ID LPAREN optionalParameters RPAREN LC_BRACE varDeclList statementsList RC_BRACE

  21  statementsList :
  22                 | statementsList stmtDecl

  23  fnDeclList :
  24             | fnDeclList fnDecl

  25  optionalParameters :
  26                     | parametersList

  27  parametersList : varType ID
  28                 | parametersList COMMA varType ID

  29  varType : NUM
  30          | BOOL
  31          | CHAR
  32          | STRING
  33          | VOID
  34          | COLOR
  35          | IMAGE
  36          | OBJECT
  37          | PIXEL
  38          | ARRAY

  39  optionalExpr :
  40               | expr

  41  expr : LITERAL
  42       | STRLIT
  43       | TRUE
  44       | FALSE
  45       | ID
  46       | ID LSQ_BRACE expr RSQ_BRACE
  47       | ID DOT ID
  48       | ID DOT ID LPAREN actuals_opt RPAREN
  49       | expr PLUS expr
  50       | expr MINUS expr
  51       | expr TIMES expr
  52       | expr DIVIDE expr
  53       | expr EQ expr
  54       | expr NEQ expr
  55       | expr LT expr
  56       | expr LEQ expr
  57       | expr GT expr
  58       | expr GEQ expr
  59       | expr AND expr
  60       | expr OR expr
  61       | MINUS expr
  62       | NOT expr
  63       | ID ASSIGN expr
  64       | ID LPAREN actuals_opt RPAREN
  65       | LPAREN expr RPAREN

  66  actuals_opt :
  67              | actuals_list

  68  actuals_list : expr
  69               | actuals_list COMMA expr

  70  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (70)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (70)

	.  reduce 70


state 4
	program : decls . EOF  (1)
	decls : decls . varDecl  (3)
	decls : decls . objDecl  (4)
	decls : decls . stmtDecl  (5)
	decls : decls . fnDecl  (6)

	LPAREN  shift 5
	LC_BRACE  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	NUM  shift 15
	BOOL  shift 16
	VOID  shift 17
	STRING  shift 18
	CHAR  shift 19
	IMAGE  shift 20
	COLOR  shift 21
	PIXEL  shift 22
	OBJECT  shift 23
	ARRAY  shift 24
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	EOF  shift 28
	.  error

	varDecl  goto 29
	objDecl  goto 30
	stmtDecl  goto 31
	fnDecl  goto 32
	varType  goto 33
	expr  goto 34


state 5
	expr : LPAREN . expr RPAREN  (65)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 35


state 6
	stmtDecl : LC_BRACE . statementsList RC_BRACE  (15)
	statementsList : .  (21)

	.  reduce 21

	statementsList  goto 36


state 7
	expr : MINUS . expr  (61)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 37


state 8
	expr : NOT . expr  (62)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 38


state 9
	expr : TRUE .  (43)

	.  reduce 43


state 10
	expr : FALSE .  (44)

	.  reduce 44


state 11
	stmtDecl : RETURN . SEMI  (13)
	stmtDecl : RETURN . expr SEMI  (14)

	SEMI  shift 39
	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 40


state 12
	stmtDecl : IF . LPAREN expr RPAREN stmtDecl  (16)
	stmtDecl : IF . LPAREN expr RPAREN stmtDecl ELSE stmtDecl  (17)

	LPAREN  shift 41
	.  error


state 13
	stmtDecl : FOR . LPAREN optionalExpr SEMI expr SEMI optionalExpr RPAREN stmtDecl  (18)

	LPAREN  shift 42
	.  error


state 14
	stmtDecl : WHILE . LPAREN expr RPAREN stmtDecl  (19)

	LPAREN  shift 43
	.  error


state 15
	varType : NUM .  (29)

	.  reduce 29


state 16
	varType : BOOL .  (30)

	.  reduce 30


state 17
	varType : VOID .  (33)

	.  reduce 33


state 18
	varType : STRING .  (32)

	.  reduce 32


state 19
	varType : CHAR .  (31)

	.  reduce 31


state 20
	varType : IMAGE .  (35)

	.  reduce 35


state 21
	varType : COLOR .  (34)

	.  reduce 34


state 22
	varType : PIXEL .  (37)

	.  reduce 37


23: shift/reduce conflict (shift 44, reduce 36) on ID
state 23
	objDecl : OBJECT . ID SEMI  (11)
	varType : OBJECT .  (36)

	ID  shift 44


state 24
	varType : ARRAY .  (38)

	.  reduce 38


state 25
	expr : LITERAL .  (41)

	.  reduce 41


state 26
	expr : STRLIT .  (42)

	.  reduce 42


state 27
	expr : ID .  (45)
	expr : ID . LSQ_BRACE expr RSQ_BRACE  (46)
	expr : ID . DOT ID  (47)
	expr : ID . DOT ID LPAREN actuals_opt RPAREN  (48)
	expr : ID . ASSIGN expr  (63)
	expr : ID . LPAREN actuals_opt RPAREN  (64)

	LPAREN  shift 45
	ASSIGN  shift 46
	LSQ_BRACE  shift 47
	DOT  shift 48
	SEMI  reduce 45
	RPAREN  reduce 45
	COMMA  reduce 45
	PLUS  reduce 45
	MINUS  reduce 45
	TIMES  reduce 45
	DIVIDE  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	LT  reduce 45
	LEQ  reduce 45
	GT  reduce 45
	GEQ  reduce 45
	AND  reduce 45
	OR  reduce 45
	RSQ_BRACE  reduce 45


state 28
	program : decls EOF .  (1)

	.  reduce 1


state 29
	decls : decls varDecl .  (3)

	.  reduce 3


state 30
	decls : decls objDecl .  (4)

	.  reduce 4


state 31
	decls : decls stmtDecl .  (5)

	.  reduce 5


state 32
	decls : decls fnDecl .  (6)

	.  reduce 6


state 33
	varDecl : varType . ID SEMI  (7)
	varDecl : varType . ID ASSIGN expr SEMI  (8)
	fnDecl : varType . ID LPAREN optionalParameters RPAREN LC_BRACE varDeclList statementsList RC_BRACE  (20)

	ID  shift 49
	.  error


state 34
	stmtDecl : expr . SEMI  (12)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	SEMI  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	.  error


state 35
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : LPAREN expr . RPAREN  (65)

	RPAREN  shift 63
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	.  error


state 36
	stmtDecl : LC_BRACE statementsList . RC_BRACE  (15)
	statementsList : statementsList . stmtDecl  (22)

	LPAREN  shift 5
	LC_BRACE  shift 6
	RC_BRACE  shift 64
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	stmtDecl  goto 65
	expr  goto 34


state 37
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : MINUS expr .  (61)

	.  reduce 61


state 38
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : NOT expr .  (62)

	.  reduce 62


state 39
	stmtDecl : RETURN SEMI .  (13)

	.  reduce 13


state 40
	stmtDecl : RETURN expr . SEMI  (14)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	SEMI  shift 66
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	.  error


state 41
	stmtDecl : IF LPAREN . expr RPAREN stmtDecl  (16)
	stmtDecl : IF LPAREN . expr RPAREN stmtDecl ELSE stmtDecl  (17)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 67


state 42
	stmtDecl : FOR LPAREN . optionalExpr SEMI expr SEMI optionalExpr RPAREN stmtDecl  (18)
	optionalExpr : .  (39)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	SEMI  reduce 39

	expr  goto 68
	optionalExpr  goto 69


state 43
	stmtDecl : WHILE LPAREN . expr RPAREN stmtDecl  (19)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 70


state 44
	objDecl : OBJECT ID . SEMI  (11)

	SEMI  shift 71
	.  error


state 45
	expr : ID LPAREN . actuals_opt RPAREN  (64)
	actuals_opt : .  (66)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	RPAREN  reduce 66

	expr  goto 72
	actuals_opt  goto 73
	actuals_list  goto 74


state 46
	expr : ID ASSIGN . expr  (63)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 75


state 47
	expr : ID LSQ_BRACE . expr RSQ_BRACE  (46)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 76


state 48
	expr : ID DOT . ID  (47)
	expr : ID DOT . ID LPAREN actuals_opt RPAREN  (48)

	ID  shift 77
	.  error


state 49
	varDecl : varType ID . SEMI  (7)
	varDecl : varType ID . ASSIGN expr SEMI  (8)
	fnDecl : varType ID . LPAREN optionalParameters RPAREN LC_BRACE varDeclList statementsList RC_BRACE  (20)

	SEMI  shift 78
	LPAREN  shift 79
	ASSIGN  shift 80
	.  error


state 50
	stmtDecl : expr SEMI .  (12)

	.  reduce 12


state 51
	expr : expr PLUS . expr  (49)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 81


state 52
	expr : expr MINUS . expr  (50)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 82


state 53
	expr : expr TIMES . expr  (51)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 83


state 54
	expr : expr DIVIDE . expr  (52)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 84


state 55
	expr : expr EQ . expr  (53)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 85


state 56
	expr : expr NEQ . expr  (54)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 86


state 57
	expr : expr LT . expr  (55)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 87


state 58
	expr : expr LEQ . expr  (56)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 88


state 59
	expr : expr GT . expr  (57)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 89


state 60
	expr : expr GEQ . expr  (58)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 90


state 61
	expr : expr AND . expr  (59)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 91


state 62
	expr : expr OR . expr  (60)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 92


state 63
	expr : LPAREN expr RPAREN .  (65)

	.  reduce 65


state 64
	stmtDecl : LC_BRACE statementsList RC_BRACE .  (15)

	.  reduce 15


state 65
	statementsList : statementsList stmtDecl .  (22)

	.  reduce 22


state 66
	stmtDecl : RETURN expr SEMI .  (14)

	.  reduce 14


state 67
	stmtDecl : IF LPAREN expr . RPAREN stmtDecl  (16)
	stmtDecl : IF LPAREN expr . RPAREN stmtDecl ELSE stmtDecl  (17)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	RPAREN  shift 93
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	.  error


state 68
	optionalExpr : expr .  (40)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	SEMI  reduce 40
	RPAREN  reduce 40


state 69
	stmtDecl : FOR LPAREN optionalExpr . SEMI expr SEMI optionalExpr RPAREN stmtDecl  (18)

	SEMI  shift 94
	.  error


state 70
	stmtDecl : WHILE LPAREN expr . RPAREN stmtDecl  (19)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	RPAREN  shift 95
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	.  error


state 71
	objDecl : OBJECT ID SEMI .  (11)

	.  reduce 11


state 72
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	actuals_list : expr .  (68)

	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	RPAREN  reduce 68
	COMMA  reduce 68


state 73
	expr : ID LPAREN actuals_opt . RPAREN  (64)

	RPAREN  shift 96
	.  error


state 74
	actuals_opt : actuals_list .  (67)
	actuals_list : actuals_list . COMMA expr  (69)

	COMMA  shift 97
	RPAREN  reduce 67


state 75
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : ID ASSIGN expr .  (63)

	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	SEMI  reduce 63
	RPAREN  reduce 63
	COMMA  reduce 63
	RSQ_BRACE  reduce 63


state 76
	expr : ID LSQ_BRACE expr . RSQ_BRACE  (46)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	LEQ  shift 58
	GT  shift 59
	GEQ  shift 60
	AND  shift 61
	OR  shift 62
	RSQ_BRACE  shift 98
	.  error


state 77
	expr : ID DOT ID .  (47)
	expr : ID DOT ID . LPAREN actuals_opt RPAREN  (48)

	LPAREN  shift 99
	SEMI  reduce 47
	RPAREN  reduce 47
	COMMA  reduce 47
	PLUS  reduce 47
	MINUS  reduce 47
	TIMES  reduce 47
	DIVIDE  reduce 47
	EQ  reduce 47
	NEQ  reduce 47
	LT  reduce 47
	LEQ  reduce 47
	GT  reduce 47
	GEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	RSQ_BRACE  reduce 47


state 78
	varDecl : varType ID SEMI .  (7)

	.  reduce 7


state 79
	fnDecl : varType ID LPAREN . optionalParameters RPAREN LC_BRACE varDeclList statementsList RC_BRACE  (20)
	optionalParameters : .  (25)

	NUM  shift 15
	BOOL  shift 16
	VOID  shift 17
	STRING  shift 18
	CHAR  shift 19
	IMAGE  shift 20
	COLOR  shift 21
	PIXEL  shift 22
	OBJECT  shift 100
	ARRAY  shift 24
	RPAREN  reduce 25

	varType  goto 101
	optionalParameters  goto 102
	parametersList  goto 103


state 80
	varDecl : varType ID ASSIGN . expr SEMI  (8)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 25
	STRLIT  shift 26
	ID  shift 27
	.  error

	expr  goto 104


state 81
	expr : expr . PLUS expr  (49)
	expr : expr PLUS expr .  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
